--- a/ansible/playbooks/proxmox/templates/etc-hosts.j2
+++ b/ansible/playbooks/proxmox/templates/etc-hosts.j2
@@ -1,5 +1,5 @@
 127.0.0.1       localhost
-127.0.1.1       {{ hostname }}.{{ domain }} {{ hostname }}
+{{ ip_address }}       {{ hostname }}.{{ domain }} {{ hostname }}
 
 # The following lines are desirable for IPv6 capable hosts
 ::1     localhost ip6-localhost ip6-loopback
